<resources>
    <string name="app_name">Toko Baut Jaya</string>
    <string name="slogan">Toko kusen online terpercaya</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Cari</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_detail">Detail Makanan</string>
    <string name="menu_view_orders">Pesanan Saya</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_food_list">List Produk</string>
    <string name="popular_categories">Kategori Populer</string>
    <string name="best_deals">Penawaran Terbaik</string>
    <string name="sign_out">Logout</string>
    <string name="action_filter">Filter</string>
    <string name="menu_menu">Produk</string>
    <string name="size">Size</string>
    <string name="tambahan">Tambahan</string>
    <string name="communicate">Communicate</string>

    <string name="action_clear_cart">Kosongkan Keranjang</string>


    <string name="mapbox_access_token">sk.eyJ1IjoiYWthcmFkaXN0aXJhIiwiYSI6ImNraGFiNWthbTE1OHEycnJ0YW9tcWF5Nm0ifQ.ELJor5KbOeSBPm4k5qVgyg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

</resources>
