<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/category_grup">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_door_sliding_24"
            android:title="@string/menu_menu" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/view_order_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_view_orders" />
    </group>

    <group android:checkableBehavior="none">
        <item android:title="Pengaturan">
            <menu>
                <item
                    android:id="@+id/nav_akun_saya"
                    android:icon="@drawable/ic_baseline_location_on_24"
                    android:title="Alamat Saya" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>
